# shared_gcadapter

./: CMakeLists.txt  README.md
lib/shared_adapter/: shared_adapter.cpp  shared_adapter.h
src/client_example/: client.cpp
src/server/: server.cpp
